SERVER-9902 Use #pragma once in StatusWith