src/mongo/base/status_with.h
@@ -15,6 +15,8 @@
  *    limitations under the License.
  */
 
+#pragma once
+
 #include "mongo/base/status.h"
 
 namespace mongo {
